RESOLVED FIXED191119
In WebCore::ResourceLoadObserver, use document.sessionID().isEphemeral() when possible and check for page existence when not
https://bugs.webkit.org/show_bug.cgi?id=191119
Summary In WebCore::ResourceLoadObserver, use document.sessionID().isEphemeral() when...
John Wilander
Reported 2018-10-31 10:34:29 PDT
https://bugs.webkit.org/show_bug.cgi?id=188757 restructured the calls to ResourceLoadObserver::shouldLog(). Now we need to either get the boolean parameter from the document or check the validity of the page.
Attachments
Patch (2.03 KB, patch)
2018-10-31 12:03 PDT, John Wilander
no flags
Patch (11.28 KB, patch)
2018-11-01 15:11 PDT, John Wilander
no flags
Patch (11.38 KB, patch)
2018-11-01 15:40 PDT, John Wilander
no flags
Patch for landing (11.32 KB, patch)
2018-11-01 17:14 PDT, John Wilander
no flags
John Wilander
Comment 1 2018-10-31 10:34:53 PDT
John Wilander
Comment 2 2018-10-31 12:03:34 PDT
Chris Dumez
Comment 3 2018-10-31 12:14:05 PDT
Comment on attachment 353517 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=353517&action=review > Source/WebCore/ChangeLog:9 > + No new tests. The change just makes use of a reference instead of a pointer We should be able to write an API test for this: 1. Create a Legacy Mac WebView 2. Call _close on it 3. Call keyDown on it
John Wilander
Comment 4 2018-11-01 15:11:42 PDT
EWS Watchlist
Comment 5 2018-11-01 15:14:00 PDT
Attachment 353649 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:3581: developmentRegion is not en. [xcodeproj/settings] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:86: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:89: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:90: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:91: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:92: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:93: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:94: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 8 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
John Wilander
Comment 6 2018-11-01 15:40:29 PDT
EWS Watchlist
Comment 7 2018-11-01 15:42:45 PDT
Attachment 353654 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:3581: developmentRegion is not en. [xcodeproj/settings] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:89: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:92: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:93: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:94: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:95: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:96: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:97: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 8 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
John Wilander
Comment 8 2018-11-01 15:49:20 PDT
(In reply to Build Bot from comment #7) > Attachment 353654 [details] did not pass style-queue: > > > ERROR: Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:3581: > developmentRegion is not en. [xcodeproj/settings] [5] It says "English" instead of "en." My patch does not change this value. > ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:89: > Weird number of spaces at line-start. Are you using a 4-space indent? > [whitespace/indent] [3] > ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:92: > Weird number of spaces at line-start. Are you using a 4-space indent? > [whitespace/indent] [3] > ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:93: > Weird number of spaces at line-start. Are you using a 4-space indent? > [whitespace/indent] [3] > ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:94: > Weird number of spaces at line-start. Are you using a 4-space indent? > [whitespace/indent] [3] > ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:95: > Weird number of spaces at line-start. Are you using a 4-space indent? > [whitespace/indent] [3] > ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:96: > When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > ERROR: Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:97: > Weird number of spaces at line-start. Are you using a 4-space indent? > [whitespace/indent] [3] These are all to line up the parameters for the creation of the NSEvent object. We do the same indentation in PlatformWebViewMac.mm and CommandBackForward.mm.
Chris Dumez
Comment 9 2018-11-01 16:58:48 PDT
Comment on attachment 353654 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=353654&action=review > Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm:74 > + RetainPtr<ClosingWebViewThenSendingItAKeyDownEventLoadDelegate> loadDelegate = adoptNS([[ClosingWebViewThenSendingItAKeyDownEventLoadDelegate alloc] init]); auto
John Wilander
Comment 10 2018-11-01 17:14:11 PDT
Created attachment 353665 [details] Patch for landing
John Wilander
Comment 11 2018-11-01 17:14:37 PDT
Thanks, Chris!
WebKit Commit Bot
Comment 12 2018-11-01 17:51:21 PDT
Comment on attachment 353665 [details] Patch for landing Clearing flags on attachment: 353665 Committed r237711: <https://trac.webkit.org/changeset/237711>
WebKit Commit Bot
Comment 13 2018-11-01 17:51:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.