In WebCore::ResourceLoadObserver, use document.sessionID().isEphemeral() when possible and check for page existence when not https://bugs.webkit.org/show_bug.cgi?id=191119 <rdar://problem/44176965>

Reviewed by Chris Dumez.

Source/WebCore:

New API test added.

* loader/ResourceLoadObserver.cpp:
(WebCore::ResourceLoadObserver::logSubresourceLoading):
(WebCore::ResourceLoadObserver::logUserInteractionWithReducedTimeResolution):

Tools:

This is an API test for a WebKitLegacy WebView that is first closed and then
JavaScript is handed a keyboard event.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitLegacy/mac/ClosingWebView.mm: Added.
(-[ClosingWebViewThenSendingItAKeyDownEventLoadDelegate webView:didFinishLoadForFrame:]):
(-[KeyboardEventListener handleEvent:]):
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/205983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237711 268f45cc-cd09-0410-ab3c-d52691b4dbfc